fix: 修复块引用数量标志被块滚动条覆盖问题 | Fix the issue that the block quote number flag is covered by the block scrollbar.

--- a/style/module/panel-editor.less
+++ b/style/module/panel-editor.less
@@ -114,6 +114,7 @@
 
     .protyle-scroll__bar {
         right: -98px;
+        z-index: auto;
     }
 }
 
